Standalone tuition debit entries on enrolment

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -107,6 +107,7 @@ label.Product.code=Código
 label.Product.vatType=Taxa de IVA
 
 label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NAME=Serviço Académico
+label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NUMBER_YEAR=Nº do pedido
 label.AcademicTreasuryEventKeys.EXECUTION_YEAR=Ano Lectivo
 label.AcademicTreasuryEventKeys.DETAILED=Discriminado
 label.AcademicTreasuryEventKeys.URGENT=Urgente
@@ -135,6 +136,7 @@ label.AcademicTreasuryEventKeys.AMOUNT_PER_COURSE=Montante por inscrição
 label.AcademicTreasuryEventKeys.DUE_DATE=Data de vencimento
 label.AcademicTreasuryEventKeys.DEGREE=Curso
 label.AcademicTreasuryEventKeys.DEGREE_CURRICULAR_PLAN=Plano Curricular
+label.AcademicTreasuryEventKeys.ENROLMENT=Disciplina
 
 error.Tariff.cannot.delete=Não é possível remover o tarifário. Verifique se não tem items de dívidas associadas.
 
@@ -177,6 +179,7 @@ label.TuitionPaymentPlan.order.down.success=O plano foi ordenado com sucesso.
 label.TuitionPaymentPlan.order.up=Ordenar para cima
 label.TuitionPaymentPlan.order.down=Ordenar para baixo
 label.TuitionPaymentPlan.empty.for.degree.curricular.plan=Não estão criados planos de propinas para este plano curricular
+label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricular Isolada: {0}
 
 error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
 error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
@@ -355,3 +358,4 @@ label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração T
 label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
 label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
+
