Improve emoluments creation & edition Automatic debit entries generation (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -58,6 +58,7 @@ label.AcademicTariff.interestType=Cálculo do juro
 label.AcademicTariff.numberOfDaysAfterDueDate=Dias após vencimento
 label.AcademicTariff.maximumDaysToApplyPenalty=Máximo de dias a aplicar
 label.AcademicTariff.maximumMonthsToApplyPenalty=Máximo de meses a aplicar
+label.AcademicTariff.rate=Taxa
 label.AcademicTariff.interestFixedAmount=Montante de juro
 
 error.AcademicTariff.administrativeOffice.required=A secretaria é obrigatória.
@@ -286,7 +287,7 @@ label.manageEmoluments.createEmolumentTariff=Criar tarifário
 label.manageEmoluments.viewEmolumentTariff=ViewEmolumentTariff
 label.manageEmoluments.viewEmolumentTariff.confirmDelete=Delete confirmation
 # UpdateScreen updateEmolumentTariff
-label.manageEmoluments.updateEmolumentTariff=UpdateEmolumentTariff
+label.manageEmoluments.updateEmolumentTariff=Actualizar Emolumento
 
 
 label.title.manageServiceRequestMapEntry=Mapeamento de Produtos para Serviços Académicos
@@ -352,10 +353,19 @@ label.TuitionDebtCreation.confirmTuitionDebtCreation=Confirmar Lançamento da Dív
 
 
 label.title.manageAcademicTreasurySettings=Configuração Tesouraria Académica
-# ReadScreen readAcademicTreasurySettings
 label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração Tesouraria Académica
-# UpdateScreen updateAcademicTreasurySettings
 label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
 label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
 
+label.title.manageAcademicTax=Taxas Académicas
+label.manageAcademicTax.searchAcademicTax=Taxas Académicas
+label.manageAcademicTax.searchAcademicTax.confirmDelete=Deseja remover a taxa académica?
+label.AcademicTax.product=Produto
+label.manageAcademicTax.createAcademicTax=Criar Taxa Académica
+label.AcademicTax.appliedOnRegistration=Aplicado a matrícula
+label.AcademicTax.appliedOnRegistrationFirstYear=Aplicada 1º ano 1º vez (matrícula)
+label.AcademicTax.appliedOnRegistrationSubsequentYears=Aplicado a partir da 2º inscrição (matrícula)
+label.manageAcademicTax.readAcademicTax=Detalhes da Taxa Académica
+label.manageAcademicTax.readAcademicTax.confirmDelete=Deseja remover a taxa académica
+label.manageAcademicTax.updateAcademicTax=Actualizar a Taxa Académica
