Academic Act Suspension (WIP) Augment Academic Treasury API

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -357,6 +357,10 @@ label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração T
 label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
 label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
+label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes de actos académicos em caso de dívida
+label.AcademicTreasurySettings.academicalActBlockingProduct=Produto
+label.AcademicTreasurySettings.academicalActBlockingProduct.active=[ACTIVO]
+label.AcademicTreasurySettings.academicalActBlockingProduct.inactive=[INACTIVO]
 
 label.title.manageAcademicTax=Taxas Académicas
 label.manageAcademicTax.searchAcademicTax=Taxas Académicas
@@ -401,3 +405,16 @@ label.AcademicDebtGenerationRule.inactive.message=[INACTIVO]
 label.manageacademicdebtgenerationrule.inactivate=Desactivar
 label.manageacademicdebtgenerationrule.activate=Activar
 label.manageacademicdebtgenerationrule.process=Processar
+
+
+label.title.manageAcademicActBlockingSuspension=Suspensão de bloqueios de actos académicos
+label.manageAcademicActBlockingSuspension.searchAcademicActBlockingSuspension=Suspensão de bloqueios de actos académicos
+label.manageAcademicActBlockingSuspension.searchAcademicActBlockingSuspension.confirmDelete=Deseja remover a suspensão?
+label.AcademicActBlockingSuspension.reason=Motivo
+label.AcademicActBlockingSuspension.endDate=Data de fim
+label.AcademicActBlockingSuspension.beginDate=Data de inicio
+label.manageAcademicActBlockingSuspension.createAcademicActBlockingSuspension=Criar suspensão de bloqueios de actos académicos
+label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension=Detalhes da suspensão de bloqueios de actos académicos
+label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension.confirmDelete=Deseja remover a suspensão?
+label.manageAcademicActBlockingSuspension.updateAcademicActBlockingSuspension=Actualizar suspensão de bloqueios de actos académicos
+
