Extra curricular tuitions

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -180,7 +180,8 @@ label.TuitionPaymentPlan.order.down.success=O plano foi ordenado com sucesso.
 label.TuitionPaymentPlan.order.up=Ordenar para cima
 label.TuitionPaymentPlan.order.down=Ordenar para baixo
 label.TuitionPaymentPlan.empty.for.degree.curricular.plan=Não estão criados planos de propinas para este plano curricular
-label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricular Isolada: {0}
+label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricular Isolada: {0} - {1} ({2} ECTS)
+label.TuitionPaymentPlan.extracurricular.debit.entry.name=Propina em Unidade Extracurricular: {0} - {1} ({2} ECTS)
 
 error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
 error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
@@ -248,6 +249,7 @@ error.TuitionInstallmentTariff.factor.required=O factor é obrigatório.
 error.TuitionInstallmentTariff.totalEctsOrUnits.required=O total ({0} por ano lectivo) é obrigatório.
 error.TuitionInstallmentTariff.factor.must.be.positive=O factor tem de ser positivo.
 error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} por ano lectivo) tem de ser positivo.
+error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propinas principal não está definido.
 label.TuitionInstallmentTariff.description=Prestação
 label.TuitionInstallmentTariff.vat=IVA (%)
 
@@ -323,6 +325,7 @@ label.manageTuitionPaymentPlanGroup.updateTuitionPaymentPlanGroup=Actualizar o T
 
 label.title.manageTuitionPaymentPlan=Planos de Propinas
 label.title.manageTuitionPaymentPlanStandalone=Propinas para Curriculares Isoladas
+label.title.manageTuitionPaymentPlanExtracurricular=Propinas para Extracurriculares
 
 label.manageTuitionPaymentPlan.chooseFinantialEntity=Escolher Entidade Financeira
 label.manageTuitionPaymentPlan.chooseFinantialEntity.choose=Escolher
