--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -22,6 +22,9 @@ label.false=Não
 label.continue=Continuar
 label.add=Adicionar
 label.confirm=Confirmar
+label.annul=Anular
+label.revert=Reverter
+label.annuled=Anulado
 
 #---------------------------
 #END OF GENERIC RESOURCES
@@ -110,6 +113,8 @@ label.Product.vatType=Taxa de IVA
 label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NAME=Serviço Académico
 label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NUMBER_YEAR=Nº do pedido
 label.AcademicTreasuryEventKeys.EXECUTION_YEAR=Ano Lectivo
+label.AcademicTreasuryEventKeys.EXECUTION_SEMESTER=Semestre
+label.AcademicTreasuryEventKeys.EVALUATION_SEASON=Época de avaliação
 label.AcademicTreasuryEventKeys.DETAILED=Discriminado
 label.AcademicTreasuryEventKeys.URGENT=Urgente
 label.AcademicTreasuryEventKeys.LANGUAGE=Lingua
@@ -359,11 +364,13 @@ label.title.manageAcademicTreasurySettings=Configuração Tesouraria Académica
 label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração Tesouraria Académica
 label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
 label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
+label.AcademicTreasurySettings.improvementAcademicTax=Taxa de Melhoria
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
 label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes de actos académicos em caso de dívida
 label.AcademicTreasurySettings.academicalActBlockingProduct=Produto
 label.AcademicTreasurySettings.academicalActBlockingProduct.active=[ACTIVO]
 label.AcademicTreasurySettings.academicalActBlockingProduct.inactive=[INACTIVO]
+label.AcademicTreasurySettings.academicalActBlocking.selected=Seleccionado
 
 label.title.manageAcademicTax=Taxas Académicas
 label.manageAcademicTax.searchAcademicTax=Taxas Académicas
@@ -373,6 +380,7 @@ label.manageAcademicTax.createAcademicTax=Criar Taxa Académica
 label.AcademicTax.appliedOnRegistration=Aplicado a matrícula
 label.AcademicTax.appliedOnRegistrationFirstYear=Aplicada 1º ano 1º vez (matrícula)
 label.AcademicTax.appliedOnRegistrationSubsequentYears=Aplicado a partir da 2º inscrição (matrícula)
+label.AcademicTax.improvement.debit.entry.description=Taxa de Melhoria: {0} ({1})
 label.manageAcademicTax.readAcademicTax=Detalhes da Taxa Académica
 label.manageAcademicTax.readAcademicTax.confirmDelete=Deseja remover a taxa académica
 label.manageAcademicTax.updateAcademicTax=Actualizar a Taxa Académica
@@ -420,4 +428,7 @@ label.manageAcademicActBlockingSuspension.createAcademicActBlockingSuspension=Cr
 label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension=Detalhes da suspensão de bloqueios de actos académicos
 label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension.confirmDelete=Deseja remover a suspensão?
 label.manageAcademicActBlockingSuspension.updateAcademicActBlockingSuspension=Actualizar suspensão de bloqueios de actos académicos
+
+error.AcademicTax.must.be.applied.on.some.registration.enrolment.year=A taxa deverá ser aplicada num ano curricular da matrícula. Indique se é aplicada a alunos inscritos 1º ano 1º vez na matrícula ou a partir do 2º ano da matrícula.
+
 
