Feed treasury access control with academic access control

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -431,4 +431,10 @@ label.manageAcademicActBlockingSuspension.updateAcademicActBlockingSuspension=Ac
 
 error.AcademicTax.must.be.applied.on.some.registration.enrolment.year=A taxa deverá ser aplicada num ano curricular da matrícula. Indique se é aplicada a alunos inscritos 1º ano 1º vez na matrícula ou a partir do 2º ano da matrícula.
 
-
+label.title.manageFinantialEntityAdministrativeOffice=Gerir Entidades Financeiras e Secretarias Académicas
+label.manageFinantialEntityAdministrativeOffice.searchFinantialEntity=Gerir Entidades Financeiras e Secretarias Académicas
+label.FinantialEntity.name=Entidade Financeira
+label.FinantialEntity.administrativeOffice=Secretaria Académica
+label.manageFinantialEntityAdministrativeOffice.readFinantialEntity=Detalhes da Entidade Financeira
+label.manageFinantialEntityAdministrativeOffice.readFinantialEntity.confirmDelete=Delete confirmation
+label.manageFinantialEntityAdministrativeOffice.updateFinantialEntity=Actualizar Entidade Financeira
