Revert finantial entity and administrative office association order

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -417,6 +417,9 @@ label.manageacademicdebtgenerationrule.inactivate=Desactivar
 label.manageacademicdebtgenerationrule.activate=Activar
 label.manageacademicdebtgenerationrule.process=Processar
 
+label.FinantialEntity.finantialEntity=Entidade Financeira
+
+
 
 label.title.manageAcademicActBlockingSuspension=Suspensão de bloqueios de actos académicos
 label.manageAcademicActBlockingSuspension.searchAcademicActBlockingSuspension=Suspensão de bloqueios de actos académicos
@@ -435,6 +438,6 @@ label.title.manageFinantialEntityAdministrativeOffice=Gerir Entidades Financeira
 label.manageFinantialEntityAdministrativeOffice.searchFinantialEntity=Gerir Entidades Financeiras e Secretarias Académicas
 label.FinantialEntity.name=Entidade Financeira
 label.FinantialEntity.administrativeOffice=Secretaria Académica
-label.manageFinantialEntityAdministrativeOffice.readFinantialEntity=Detalhes da Entidade Financeira
+label.manageFinantialEntityAdministrativeOffice.readFinantialEntity=Detalhes da Scretaria Académica / Entidade Financeira
 label.manageFinantialEntityAdministrativeOffice.readFinantialEntity.confirmDelete=Delete confirmation
 label.manageFinantialEntityAdministrativeOffice.updateFinantialEntity=Actualizar Entidade Financeira
