Improve tuition management

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -155,7 +155,11 @@ label.TuitionPaymentPlanGroup.currentProduct=Produto Actual Associado
 
 label.TuitionPaymentPlanGroup.creation.success=O tipo de propina foi criado com sucesso.
 
-error.TuitionPaymentPlanGroup.only.one.type.supported=Apenas é suportado um tipo. Verifique se encontra criado.
+error.TuitionPaymentPlanGroup.only.one.type.supported=Apenas é suportado um tipo.
+error.TuitionPaymentPlanGroup.for.registration.already.exists=O tipo de propina indicado já se encontra criado.
+error.TuitionPaymentPlanGroup.code.already.exists=Já existe um tipo de propina com o código indicado.
+error.TuitionPaymentPlanGroup.defaultGroupForStandalone.required=É necessário definir o tipo de propina para curriculares isoladas
+error.TuitionPaymentPlanGroup.defaultGroupForExtracurricular.required=É necessário definir o tipo de propina para extracurriculares
 
 label.TuitionPaymentPlan.paymentPlanName=Propina para {0} ({1})
 label.TuitionPaymentPlan.paymentPlanName.customized=Propina para {0} ({1}) [{2}]
@@ -168,7 +172,7 @@ label.TuitionPaymentPlan.registrationRegimeType=Regime
 label.TuitionPaymentPlan.registrationProtocol=Acordo
 label.TuitionPaymentPlan.ingression=Ingresso
 label.TuitionPaymentPlan.curricularYear=Ano Curricular
-label.TuitionPaymentPlan.curricularSemester=Semestre Curricular
+label.TuitionPaymentPlan.curricularSemester=Semestre
 label.TuitionPaymentPlan.firstTimeStudent=1º ano 1º vez
 label.TuitionPaymentPlan.customized=Customizado
 label.TuitionPaymentPlan.customizedName=Nome do Plano
@@ -198,7 +202,23 @@ error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de pro
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas.
 error.TuitionPaymentPlan.installments.must.not.be.empty=O plano de propinas deve ter pelo menos uma prestação.
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se já foram criadas dívidas associadas as prestações das propinas.
+error.TuitionPaymentPlan.choose.degree.curricular.plans=Deverá escolher pelo menos um plano curricular.
+error.TuitionPaymentPlan.custom.payment.plan.name.required=O nome do plano é obrigatório.
+error.TuitionPaymentPlan.customized.plan.cannot.have.other.options=Um plano customizado não pode ter as propriedades acima definidas.
+error.TuitionPaymentPlan.beginDate.required=A data de inicio é obrigatória.
+error.TuitionPaymentPlan.dueDateCalculationType.required=A data de vencimento é obrigatória.
+error.TuitionPaymentPlan.fixedDueDate.required=A data fixa de vencimento é obrigatória.
+error.TuitionPaymentPlan.interestType.required=O cálculo do juro é obrigatório.
+error.TuitionPaymentPlan.interestFixedAmount.required=O montante do juro é obrigatório.
+error.TuitionPaymentPlan.interestRate.required=A taxa de juro é obrigatória.
+error.TuitionPaymentPlan.tuitionInstallmentProduct.required=O produto da prestação de propina é obrigatória.
+error.TuitionPaymentPlan.tuitionCalculationType.required=A forma de cálculo da prestação de propina é obrigatória.
+error.TuitionPaymentPlan.fixedAmount.required= O montante da prestação de propina é obrigatória.
+error.TuitionPaymentPlan.ectsCalculationType.required=A forma de cálculo do montante ECTS ou disciplina é obrigatória.
+error.TuitionPaymentPlan.factor.required=O factor é obrigatório.
+error.TuitionPaymentPlan.totalEctsOrUnits.required=O total de ECTS ou disciplinas por ano é obrigatório.
 
+ 
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
@@ -257,6 +277,7 @@ error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} po
 error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propinas principal não está definido.
 label.TuitionInstallmentTariff.description=Prestação
 label.TuitionInstallmentTariff.vat=IVA (%)
+label.TuitionInstallmentTariff.noDueDate=Sem data de vencimento
 
 label.TupleDataSourceBean.select.description=Seleccione uma opção
 
@@ -373,14 +394,16 @@ label.AcademicTreasurySettings.academicalActBlockingProduct.inactive=[INACTIVO]
 label.AcademicTreasurySettings.academicalActBlocking.selected=Seleccionado
 
 label.title.manageAcademicTax=Taxas Académicas
+
+label.manageAcademicTax.createAcademicTax=Criar Taxa Académica
 label.manageAcademicTax.searchAcademicTax=Taxas Académicas
 label.manageAcademicTax.searchAcademicTax.confirmDelete=Deseja remover a taxa académica?
 label.AcademicTax.product=Produto
-label.manageAcademicTax.createAcademicTax=Criar Taxa Académica
 label.AcademicTax.appliedOnRegistration=Aplicado a matrícula
 label.AcademicTax.appliedOnRegistrationFirstYear=Aplicada 1º ano 1º vez (matrícula)
 label.AcademicTax.appliedOnRegistrationSubsequentYears=Aplicado a partir da 2º inscrição (matrícula)
 label.AcademicTax.improvement.debit.entry.description=Taxa de Melhoria: {0} ({1})
+label.AcademicTax.appliedAutomatically=Aplicada automáticamente
 label.manageAcademicTax.readAcademicTax=Detalhes da Taxa Académica
 label.manageAcademicTax.readAcademicTax.confirmDelete=Deseja remover a taxa académica
 label.manageAcademicTax.updateAcademicTax=Actualizar a Taxa Académica
