Improve tuition debt creation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -134,6 +134,8 @@ label.AcademicTreasuryEventKeys.URGENT_PERCENTAGE=Taxa por urgência
 label.AcademicTreasuryEventKeys.CALCULATED_URGENT_AMOUNT=Montante da taxa de urgência
 label.AcademicTreasuryEventKeys.FINAL_AMOUNT=Montante final
 label.AcademicTreasuryEventKeys.TUITION_CALCULATION_TYPE=Forma de cálculo
+label.AcademicTreasuryEventKeys.TUITION_PAYMENT_PLAN=Plano de propinas
+label.AcademicTreasuryEventKeys.TUITION_PAYMENT_PLAN_CONDITIONS=Condições do plano de propinas
 label.AcademicTreasuryEventKeys.FIXED_AMOUNT=Montante fixo
 label.AcademicTreasuryEventKeys.ECTS_CREDITS=Créditos ECTS
 label.AcademicTreasuryEventKeys.AMOUNT_PER_ECTS=Montante por ECTS
@@ -191,6 +193,7 @@ label.TuitionPaymentPlan.order.down=Ordenar para baixo
 label.TuitionPaymentPlan.empty.for.degree.curricular.plan=Não estão criados planos de propinas para este plano curricular
 label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricular Isolada: {0} - {1} ({2} ECTS)
 label.TuitionPaymentPlan.extracurricular.debit.entry.name=Propina em Unidade Extracurricular: {0} - {1} ({2} ECTS)
+label.TuitionPaymentPlan.academicalActBlockingOff=Não bloqueia actos académicos em caso de dívida
 
 error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
 error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
