--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -194,6 +194,8 @@ label.TuitionPaymentPlan.empty.for.degree.curricular.plan=Não estão criados plan
 label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricular Isolada: {0} - {1} ({2} ECTS)
 label.TuitionPaymentPlan.extracurricular.debit.entry.name=Propina em Unidade Extracurricular: {0} - {1} ({2} ECTS)
 label.TuitionPaymentPlan.academicalActBlockingOff=Não bloqueia actos académicos em caso de dívida
+label.TuitionPaymentPlan.standalone=Curriculares isoladas
+label.TuitionPaymentPlan.extracurricular=Extracurriculares
 
 error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
 error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
@@ -372,12 +374,16 @@ label.DegreeCurricularPlan.degreeTypeName=Tipo de Curso
 label.DegreeCurricularPlan.executionYear=Ano Lectivo
 
 label.TuitionDebtCreationBean.create.tuition.debts=Lançar dívida de propina
+label.TuitionDebtCreationBean.create.standalonetuition.debts=Lançar dívida de propina para unidades curriculares isoladas
+label.TuitionDebtCreationBean.create.extracurriculartuition.debts=Lançar dívida de propina para unidades extracurriculares
 label.TuitionDebtCreationBean.registration=Matrícula
 label.TuitionDebtCreationBean.executionYear=Ano Lectivo
 label.TuitionDebtCreationBean.debtDate=Data de Lançamento
+label.TuitionDebtCreationBean.enrolment=Disciplina
 label.TuitionDebtCreationBean.infered=Plano de Propinas Inferido?
 label.TuitionDebtCreationBean.tuitionPaymentPlan=Plano de Propinas
 label.TuitionDebtCreationBean.infer.select.registration.and.executionYear=Seleccione a matrícula e o ano lectivo.
+label.TuitionDebtCreationBean.infer.select.enrolment=Seleccione a disciplina.
 label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano de propinas. Verifique os planos criados para o plano curricular do aluno.
 
 label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívida de Propina
