Academic Service Request and tax debt creation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -473,3 +473,49 @@ label.FinantialEntity.administrativeOffice=Secretaria Académica
 label.manageFinantialEntityAdministrativeOffice.readFinantialEntity=Detalhes da Scretaria Académica / Entidade Financeira
 label.manageFinantialEntityAdministrativeOffice.readFinantialEntity.confirmDelete=Delete confirmation
 label.manageFinantialEntityAdministrativeOffice.updateFinantialEntity=Actualizar Entidade Financeira
+
+#AcademicTaxDebtCreationBean
+label.AcademicTaxDebtCreation.createAcademicTaxDebtCreationBean=Lançar Taxas Académicas
+label.AcademicTaxDebtCreationBean.create.academictax.debts=Lançar taxas académicas
+label.AcademicTaxDebtCreationBean.academicTax=Taxa académica
+label.AcademicTaxDebtCreationBean.registration=Matrícula
+label.AcademicTaxDebtCreationBean.executionYear=Ano Lectivo
+label.AcademicTaxDebtCreationBean.enrolmentEvaluation=Inscrição de Melhoria
+label.AcademicTaxDebtCreationBean.debtDate=Data de Lançamento
+label.AcademicTaxDebtCreationBean.debtDescription=Descrição da dívida
+label.AcademicTaxDebtCreationBean.dueDate=Data de Vencimento
+label.AcademicTaxDebtCreationBean.vat=Taxa de IVA (%)
+label.AcademicTaxDebtCreationBean.amount=Montante
+label.AcademicTaxDebtCreation.confirmAcademicTaxDebtCreation=Confirmar lançamento de dívida
+
+error.AcademicTaxDebtCreation.tariff.not.found=Não foi encontrado um tarifário para a taxa académica.
+error.AcademicTaxDebtCreation.registration.required=A matrícula é obrigatória.
+error.AcademicTaxDebtCreation.executionYear.required=O ano lectivo é obrigatório.
+error.AcademicTaxDebtCreation.debtDate.required=Indique a data de lançamento da dívida.
+error.AcademicTaxDebtCreation.academicTax.required=Indique a taxa académica.
+error.AcademicTaxDebtCreation.improvementEvaluation.required=A inscrição de melhoria é obrigatória.
+error.AcademicTaxDebtCreation.event.is.charged=A dívida já está criada.
+
+
+label.AcademicServiceRequestDebtCreationBean.create.academicservicerequest.debts=Lançar dívida para serviço académico
+label.AcademicServiceRequestDebtCreation.createAcademicServiceRequestDebtCreationBean=Lançar Dívida para Serviço Académico
+label.AcademicServiceRequestDebtCreationBean.registration=Matrícula
+label.AcademicServiceRequestDebtCreationBean.academicServiceRequest=Serviço Académico
+label.AcademicServiceRequestDebtCreationBean.debtDate=Data de Lançamento
+label.AcademicServiceRequestDebtCreation.confirmAcademicServiceRequestDebtCreation=Confirmar Lançamento de Dívida
+label.AcademicServiceRequestDebtCreationBean.academicServiceRequest=Dados do lançamento
+label.AcademicServiceRequestDebtCreationBean.registration=Matrícula
+label.AcademicServiceRequestDebtCreationBean.academicServiceRequest=Serviço Académico
+label.AcademicServiceRequestDebtCreationBean.debtDate=Data de lançamento
+label.AcademicServiceRequestDebtCreationBean.debtDescription=Descrição da Dívida
+label.AcademicServiceRequestDebtCreationBean.dueDate=Data de Vencimento
+label.AcademicServiceRequestDebtCreationBean.vat=Taxa de IVA
+label.AcademicServiceRequestDebtCreationBean.amount=Montante
+label.AcademicServiceRequest.debit.entries.created.success=A dívida para o serviço académico foi lançado com sucesso.
+
+error.AcademicServiceRequestDebtCreation.registration.required=A matrícula é obrigatória.
+error.AcademicServiceRequestDebtCreation.debtDate.required=A data de lançamento de dívida é obrigatória
+error.AcademicServiceRequestDebtCreation.academicServiceRequest.required=O serviço académico é obrigatório.
+error.AcademicServiceRequestDebtCreation.tariff.not.found=Não foi encontrado um tarifário para o serviço académico.
+error.AcademicServiceRequestDebtCreation.event.is.charged=A dívida já está lançada.
+
