Block online enrolments on courses and shifts when student is in debt

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -386,9 +386,14 @@ label.TuitionDebtCreationBean.infer.select.registration.and.executionYear=Selecc
 label.TuitionDebtCreationBean.infer.select.enrolment=Seleccione a disciplina.
 label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano de propinas. Verifique os planos criados para o plano curricular do aluno.
 
-label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívida de Propina
+label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívidas Académicas
 label.TuitionDebtCreation.confirmTuitionDebtCreation=Confirmar Lançamento da Dívida de Propina
 
+error.TuitionDebtCreationBean.registration.required=A matrícula é obrigatória.
+error.TuitionDebtCreationBean.executionYear.required=O ano lectivo é obrigatório.
+error.TuitionDebtCreationBean.debtDate.required=A data de lançamento é obrigatório.
+error.TuitionDebtCreationBean.enrolment.required=A inscrição é obrigatória.
+error.TuitionDebtCreationBean.event.is.charged=A dívida já está lançada.
 
 label.title.manageAcademicTreasurySettings=Configuração Tesouraria Académica
 label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração Tesouraria Académica
@@ -459,6 +464,11 @@ label.manageAcademicActBlockingSuspension.searchAcademicActBlockingSuspension.co
 label.AcademicActBlockingSuspension.reason=Motivo
 label.AcademicActBlockingSuspension.endDate=Data de fim
 label.AcademicActBlockingSuspension.beginDate=Data de inicio
+label.AcademicActBlockingSuspension.created.success=A suspensão foi criada com sucesso.
+label.AcademicActBlockingSuspension.versioningCreator=Criado por
+label.AcademicActBlockingSuspension.versioningCreationDate=Data de criação
+label.AcademicActBlockingSuspension.versioningUpdatedBy=Actualizado por
+label.AcademicActBlockingSuspension.versioningUpdateDate=Data de actualização
 label.manageAcademicActBlockingSuspension.createAcademicActBlockingSuspension=Criar suspensão de bloqueios de actos académicos
 label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension=Detalhes da suspensão de bloqueios de actos académicos
 label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension.confirmDelete=Deseja remover a suspensão?
@@ -519,3 +529,4 @@ error.AcademicServiceRequestDebtCreation.academicServiceRequest.required=O servi
 error.AcademicServiceRequestDebtCreation.tariff.not.found=Não foi encontrado um tarifário para o serviço académico.
 error.AcademicServiceRequestDebtCreation.event.is.charged=A dívida já está lançada.
 
+label.AcademicActBlockingSuspensionController.link=Suspensão de bloqueios de actos académicos
