Improve academic tariffs Bootstrapper for schools

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -175,6 +175,7 @@ label.TuitionPaymentPlan.registrationProtocol=Acordo
 label.TuitionPaymentPlan.ingression=Ingresso
 label.TuitionPaymentPlan.curricularYear=Ano Curricular
 label.TuitionPaymentPlan.curricularSemester=Semestre
+label.TuitionPaymentPlan.statuteType=Estatuto
 label.TuitionPaymentPlan.firstTimeStudent=1º ano 1º vez
 label.TuitionPaymentPlan.customized=Customizado
 label.TuitionPaymentPlan.customizedName=Nome do Plano
