- Corrections in UI

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -507,7 +507,7 @@ error.AcademicTaxDebtCreation.debtDate.required=Indique a data de lançamento da 
 error.AcademicTaxDebtCreation.academicTax.required=Indique a taxa académica.
 error.AcademicTaxDebtCreation.improvementEvaluation.required=A inscrição de melhoria é obrigatória.
 error.AcademicTaxDebtCreation.event.is.charged=A dívida já está criada.
-
+label.AcademicTreasurSettings.academicalActBlocking.selected=Produto bloqueia actos académicos
 
 label.AcademicServiceRequestDebtCreationBean.create.academicservicerequest.debts=Lançar dívida para serviço académico
 label.AcademicServiceRequestDebtCreation.createAcademicServiceRequestDebtCreationBean=Lançar Dívida para Serviço Académico
