--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -6,25 +6,45 @@
 label.submit=Submeter
 label.close=Fechar
 label.confirmation=Confirmação
-label.delete=Remover
+label.delete=Apagar
 label.cancel=Cancelar
 label.update=Actualizar
-label.noResultsFound=Não foram encontrados resultados.
-label.view=Ver
+label.view=Visualizar
 label.details=Detalhes
+label.upload=Upload
+label.continue=Continuar
+label.print=Imprimir
+label.noResultsFound=Não foram encontrados resultados
+label.limitexceeded=Está a ser apresentado o limite máximo de {0} resultados em {1}. Por favor refine a sua pesquisa.
 label.event.back=Voltar
 label.event.cancel=Cancelar
 label.event.update=Actualizar
 label.event.create=Criar
 label.event.delete=Remover
+label.event.upload=Upload
+label.event.add=Adicionar
+label.annull=Anular
 label.true=Sim
 label.false=Não
-label.continue=Continuar
-label.add=Adicionar
-label.confirm=Confirmar
+label.warning=Aviso
+label.select.mustselect=Deve seleccionar um registo
+label.error.create=Erro ao criar devido a 
+label.error.update=Erro ao atualizar devido a 
+label.error.delete=Erro ao eliminar devido a
+label.error.upload=Erro ao fazer upload do ficheiro devido a 
+label.summary=Sumário
+label.success.delete=Registo eliminado com sucesso
+label.success.update=Registo eliminado com sucesso
+label.success.upload=Upload feito com sucesso
+label.success.create=Registo criado com sucesso
+label.total=Total a pagar
+label.finish=Finalizar
 label.annul=Anular
 label.revert=Reverter
 label.annuled=Anulado
+
+error.TuitionPaymentPlanGroup.code.required= O código de Tipo de Propina é de preenchimento obrigatório
+error.TuitionPaymentPlanGroup.name.required= O nome de Tipo de Propina é de preenchimento obrigatório
 
 #---------------------------
 #END OF GENERIC RESOURCES
