Fix bugs on academic tax creation, tuition payment plan

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -304,7 +304,7 @@ error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propi
 label.TuitionInstallmentTariff.description=Prestação
 label.TuitionInstallmentTariff.vat=IVA (%)
 label.TuitionInstallmentTariff.noDueDate=Sem data de vencimento
-label.TuitionInstallmentTariff.bestOfFixedDateAndDaysAfterCreation=ou {0} dias após a criação do item de dívida depois da data indicada
+label.TuitionInstallmentTariff.bestOfFixedDateAndDaysAfterCreation=&nbsp;ou {0} dias após a criação do item de dívida depois da data indicada
 
 label.TupleDataSourceBean.select.description=Seleccione uma opção
 
