Tuition Payment Plan fixes

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -45,6 +45,10 @@ label.annuled=Anulado
 
 error.TuitionPaymentPlanGroup.code.required= O código de Tipo de Propina é de preenchimento obrigatório
 error.TuitionPaymentPlanGroup.name.required= O nome de Tipo de Propina é de preenchimento obrigatório
+error.TuitionPaymentPlanGroup.for.standalone.already.exists= Tipo de Propina já existe
+error.TuitionPaymentPlanGroup.delete.impossible= Não é possível apagar o Tipo de Propina
+label.TuitionPaymentPlan.degreeCurricularPlanDataSource.is.empty=Não existem planos curriculares para seleccionar
+label.createinsertinstallments.confirmDelete=Deseja remover a prestação?
 
 #---------------------------
 #END OF GENERIC RESOURCES
@@ -319,9 +323,9 @@ title.manageEmoluments=Preçário de Emolumentos
 label.title.manageEmoluments=Preçário de Emolumentos
 
 # SearchScreen chooseFinantialEntity
-label.manageEmoluments.chooseFinantialEntity=Escolher Entidade Financeira
+label.manageEmoluments.chooseFinantialEntity=Entidade Financeira
 
-label.manageEmoluments.chooseFinantialEntity.choose=Escolher
+label.manageEmoluments.chooseFinantialEntity.choose=Visualizar
 
 # SearchScreen searchEmoluments
 label.manageEmoluments.searchEmoluments=Emolumentos
@@ -380,11 +384,11 @@ label.title.manageTuitionPaymentPlan=Planos de Propinas
 label.title.manageTuitionPaymentPlanStandalone=Propinas para Curriculares Isoladas
 label.title.manageTuitionPaymentPlanExtracurricular=Propinas para Extracurriculares
 
-label.manageTuitionPaymentPlan.chooseFinantialEntity=Escolher Entidade Financeira
-label.manageTuitionPaymentPlan.chooseFinantialEntity.choose=Escolher
+label.manageTuitionPaymentPlan.chooseFinantialEntity=Entidade Financeira
+label.manageTuitionPaymentPlan.chooseFinantialEntity.choose=Visualizar
 label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan=Visualizar Planos de Propinas
-label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan.choose=Escolher
-label.manageTuitionPaymentPlan.createChooseDegreeCurricularPlans=Escolher Planos Curriculares
+label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan.choose=Visualizar
+label.manageTuitionPaymentPlan.createChooseDegreeCurricularPlans=Planos Curriculares
 label.manageTuitionPaymentPlan.createTuitionPaymentPlan=Criar Planos de Propinas
 label.manageTuitionPaymentPlan.createInsertInstallments=Inserir Prestações
 label.manageTuitionPaymentPlan.installments=Prestações
