Schools bootstrap for FF

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -425,6 +425,7 @@ label.title.manageAcademicTreasurySettings=Configuração Tesouraria Académica
 label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração Tesouraria Académica
 label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
 label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
+label.AcademicTreasurySettings.closeServiceRequestEmolumentsWithDebitNote=Fechar emolumentos de serviços académicos em nota de dívida
 label.AcademicTreasurySettings.improvementAcademicTax=Taxa de Melhoria
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
 label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes de actos académicos em caso de dívida
