Corrections for Customer DebtAccount read

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -548,6 +548,7 @@ label.AcademicServiceRequestDebtCreationBean.dueDate=Data de Vencimento
 label.AcademicServiceRequestDebtCreationBean.vat=Taxa de IVA
 label.AcademicServiceRequestDebtCreationBean.amount=Montante
 label.AcademicServiceRequest.debit.entries.created.success=A dívida para o serviço académico foi lançado com sucesso.
+label.DebtAccount.interestIncludedInDebtAmount=O valor do juro foi calculado para a o dia de hoje e encontra-se incluído no Saldo em dívida.
 
 error.AcademicServiceRequestDebtCreation.registration.required=A matrícula é obrigatória.
 error.AcademicServiceRequestDebtCreation.debtDate.required=A data de lançamento de dívida é obrigatória
