--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -524,6 +524,8 @@ label.AcademicTaxDebtCreationBean.dueDate=Data de Vencimento
 label.AcademicTaxDebtCreationBean.vat=Taxa de IVA (%)
 label.AcademicTaxDebtCreationBean.amount=Montante
 label.AcademicTaxDebtCreation.confirmAcademicTaxDebtCreation=Confirmar lançamento de dívida
+label.customer.PaymentReferenceCode.entity=Entidade
+label.customer.PaymentReferenceCode.reference=Referência
 
 error.AcademicTaxDebtCreation.tariff.not.found=Não foi encontrado um tarifário para a taxa académica.
 error.AcademicTaxDebtCreation.registration.required=A matrícula é obrigatória.
