Better presentation for tuition installments

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -260,8 +260,8 @@ EctsCalculationType.DEFAULT_PAYMENT_PLAN_INDEXED=Indexado ao plano principal
 label.TuitionInstallmentTariff.beginDate=Início
 label.TuitionInstallmentTariff.dueDate=Data de Vencimento
 label.TuitionInstallmentTariff.interests=Juro
-label.TuitionInstallmentTariff.amountPerEcts={0} por ECTS
-label.TuitionInstallmentTariff.amountPerUnits={0} por disciplina
+label.TuitionInstallmentTariff.amountPerEcts={0}/ECTS
+label.TuitionInstallmentTariff.amountPerUnits={0}/Disciplina
 label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.ectsParameters=(Factor={0}, ECTS Anuais={1})
 label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.unitsParameters=(Factor={0}, Disciplinas Anuais={1})
 label.TuitionInstallmentTariff.calculatedAutomaticaly=(Calculado automáticamente)
